# sbl-rs

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  GRAMMAR.md  README.md  basic.sbl  io.sbl  test.sbl
examples/: bake.sbl  basic.sbl  bench.sbl  fmt.sbl  io.sbl  test.sbl
src/: common.rs  internal.rs  ir.rs  lib.rs  main.rs
src/bc/: fun.rs  mod.rs  val.rs
src/compile/: bake.rs  bc.rs  bytes.rs  graph.rs  ir.rs  mod.rs
src/compile/optimize/: absolute_jumps.rs  inline.rs  mod.rs  push_compress.rs
src/ir/: fun.rs  mod.rs  val.rs
src/syntax/: ast.rs  mod.rs  parse.rs  prepro.rs  token.rs
src/vm/: bc.rs  builtins.rs  compile.rs  foreign.rs  mod.rs  val.rs  vm.rs
tests/: test-branch.rs
tools/: gen_br_tests.py
vim/ftdetect/: sbl.vim
vim/syntax/: sbl.vim
