[package]
name = "sbl"
version = "0.1.0"
authors = ["Alek Ratzloff <alekratz@gmail.com>"]
description = "SBL - a stack based language"

[dependencies]
error-chain = "0.10.0"
lazy_static = "0.2"
maplit = "0.1.4"
clap = "2.25"
matches = "0.1.6"
enum-methods = "0.0.7"
libc = "0.2"
libffi = "=0.6.1"
#itertools = "0.6.1"
petgraph = "0.4.5"
bitflags = "1.0"

